Format code so that it will minimally display output

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
   </head>
   <body>
     <ul>
-      <li id=></li>
+      <li>
+        <label for="stp">St Petersburg, Russia</label>
+        <button id="stp" type="button" class="btn btn-info">
+          More Info!
+        </button>
+      </li>
+      <li id="belgrade">Belgrade, Serbia</li>
+      <li id="armenia">Armenia</li>
     </ul>
+    <div id="info"></div>
   </body>
 </html>
